--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,57 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+.header {
+  background-image: url(/images/cover-image-dark.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  padding: 20px;
+  min-height: 768px;
+}
+
+.header__theme-menu {
+  justify-self: center;
+  align-self: start;
+}
+
+.header__title {
+  color: #DB00FF;
+text-shadow: 4px 4px 0px #FF0070;
+font-family: IBM Plex Mono;
+font-size: 157px;
+font-style: normal;
+font-weight: 700;
+line-height: 82.5%; /* 129.525px */
+align-self: center;
+}
+
+.header__text {
+  width: 50%;
+  height: min-content;
+  color: #000028;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 23.4px; /* 130% */
+justify-self: end;
+}
+
+.title-decor {
+  background-color: #FF0070;
+}
+
+.header__theme-menu-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  color: #FF0070;
+text-align: center;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 100% */
+}
