--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,32 @@
   display: grid;
   padding: 20px;
   min-height: 768px;
+  position: relative;
+  z-index: 0;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  border-top: 1px solid #FF0070;
+  border-right: 1px solid #FF0070;
+  width: 25px;
+  height: 25px;
+  z-index: 1;
+  top: 20px;
+  right: 20px;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #FF0070;
+  width: 25px;
+  height: 25px;
+  z-index: 1;
+  bottom: 20px;
+  left: 20px;
 }
 
 .header__theme-menu {
@@ -56,4 +82,31 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: 18px; /* 100% */
+}
+
+.rec {
+  position: absolute;
+  top: 20px;
+  right: 48px;
+  color: #FF0070;
+text-align: center;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 25px; /* 138.889% */
+}
+
+.rec::after {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  right: -27px;
+  width: 25px;
+  height: 25px;
+  background-image: url(/images/Ellipse\ 4.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
 }
