--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,7 @@ font-style: normal;
 font-weight: 700;
 line-height: 82.5%; /* 129.525px */
 align-self: center;
+margin-left: -20px;
 }
 
 .header__text {
@@ -75,6 +76,7 @@ justify-self: end;
 .header__theme-menu-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
   color: #FF0070;
 text-align: center;
 font-family: IBM Plex Mono;
@@ -82,6 +84,16 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: 18px; /* 100% */
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid #FF0070;
+  pointer-events: none;
 }
 
 .rec {
