--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: url(/images/cover-image.png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header {
@@ -121,4 +125,69 @@ line-height: 25px; /* 138.889% */
   background-repeat: no-repeat;
   background-position: center;
   z-index: 1;
+}
+
+.content {
+  padding: 60px 20px;
+  display: grid;
+  gap: 80px;
+}
+
+.content__section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.why-hard-concentrate {
+  grid-template-rows: 1fr 1fr;
+}
+
+.why-hard-concentrate__title {
+  color: #FF0070;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 23.4px; /* 130% */
+}
+
+.card__title {
+  color: #000028;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 23.4px; /* 130% */
+}
+
+.card__text {
+  color: #F1B2CE;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 23.4px; /* 130% */
+}
+
+.card {
+  display: grid;
+  gap: 10px;
+}
+
+.why-hard-concentrate__card {
+  grid-column: 2 / span 2;
+}
+
+.fall-concentrate__title {
+  color: #FF0070;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 23.4px; /* 130% */
+}
+
+.fall-concentrate__title {
+  grid-column: span 3;
 }
