--- a/styles/style.css
+++ b/styles/style.css
@@ -215,3 +215,58 @@ grid-row: span 6;
 .subtitle {
   grid-column: span 2;
 }
+
+.grid-gallery__subtitle {
+  grid-column: span 3;
+}
+
+.grid-gallery {
+  display: grid;
+  grid-template-rows: repeat(4, max-content);
+  gap: 20px;
+}
+
+.grid-gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid-gallery__sunset {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.grid-gallery__ice-cream {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+.grid-gallery__books {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.grid-gallery__tape {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+
+.grid-gallery__street {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+
+.grid-gallery__item {
+  margin: 0;
+}
