доделал верстку десктопа и написал переменные

--- a/styles/light.css
+++ b/styles/light.css
@@ -3,7 +3,14 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
+:root {
+  --accent-color: #FF8DCB;
+  --bkg-image: url(/images/cover-image-light.png);
+  --main-text-color: #353430;
+  --title-card-color: #353430;
+  --main-title-color: #FFC2E6;
+  --shadow-color: #FF0070;
+}
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
