--- a/styles/style.css
+++ b/styles/style.css
@@ -2,17 +2,13 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  background-image: url(/images/cover-image.png);
+  background-image: url(/images/cover-image-dark.png);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
 
 .header {
-  background-image: url(/images/cover-image-dark.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: grid;
   padding: 20px;
   min-height: 768px;
@@ -176,6 +172,11 @@ line-height: 23.4px; /* 130% */
   height: max-content;
 }
 
+.card__link {
+  text-shadow: 2px 2px 0px #FF0070;
+  text-decoration: none;
+}
+
 .why-hard-concentrate__card {
   grid-column: 2 / span 2;
 }
@@ -214,6 +215,10 @@ grid-row: span 6;
 
 .subtitle {
   grid-column: span 2;
+}
+
+.low-font-weight {
+  font-weight: 400;
 }
 
 .grid-gallery__subtitle {
@@ -269,4 +274,48 @@ grid-row: span 6;
 
 .grid-gallery__item {
   margin: 0;
+}
+
+.footer {
+  display: grid;
+  padding: 20px;
+  min-height: 768px;
+  position: relative;
+  z-index: 0;
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  border-top: 1px solid #FF0070;
+  border-right: 1px solid #FF0070;
+  width: 25px;
+  height: 25px;
+  z-index: 1;
+  top: 20px;
+  right: 20px;
+}
+
+.footer::after {
+  content: "";
+  position: absolute;
+  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #FF0070;
+  width: 25px;
+  height: 25px;
+  z-index: 1;
+  bottom: 20px;
+  left: 20px;
+}
+
+.footer__title {
+  color: #DB00FF;
+text-shadow: 2px 2px 0px #FF0070;
+font-family: IBM Plex Mono;
+font-size: 157px;
+font-style: normal;
+font-weight: 700;
+line-height: 82.5%; /* 129.525px */
+justify-self: center;
+align-self: center;
 }
