--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,10 +3,19 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+:root.theme-dark {
+  --accent-color: #FF0070;
+  --bkg-image: url(/images/cover-image-dark.png);
+  --main-text-color: #F1B2CE;
+  --title-card-color: #000028;
+  --main-title-color: #DB00FF;
+  --shadow-color: #FF0070;
+}
 
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: var(--bkg-image);
 }
