--- a/styles/light.css
+++ b/styles/light.css
@@ -3,7 +3,7 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root {
+:root.theme-light {
   --accent-color: #FF8DCB;
   --bkg-image: url(/images/cover-image-light.png);
   --main-text-color: #353430;
@@ -11,9 +11,11 @@
   --main-title-color: #FFC2E6;
   --shadow-color: #FF0070;
 }
+
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: var(--bkg-image);
 }
