--- a/styles/light.css
+++ b/styles/light.css
@@ -3,7 +3,7 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root.theme-light {
+.theme-light {
   --accent-color: #FF8DCB;
   --bkg-image: url(/images/cover-image-light.png);
   --main-text-color: #353430;
@@ -17,12 +17,20 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF8DCB;
+  --bkg-image: url(/images/cover-image-light.png);
+  --main-text-color: #353430;
+  --title-card-color: #353430;
+  --main-title-color: #FFC2E6;
+  --shadow-color: #FF0070;
+}
+
+.page {
   background-image: var(--bkg-image);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-        /* Дублируем переменные светлой темы */ 
         --accent-color: #FF8DCB;
         --bkg-image: url(/images/cover-image-light.png);
         --main-text-color: #353430;
