--- a/styles/dark.css
+++ b/styles/dark.css
@@ -10,6 +10,7 @@
   --title-card-color: #000028;
   --main-title-color: #DB00FF;
   --shadow-color: #FF0070;
+  --decorate-color: #FF0070;
 }
 
 .page.theme_dark {
@@ -23,8 +24,106 @@
   --title-card-color: #000028;
   --main-title-color: #DB00FF;
   --shadow-color: #FF0070;
+  --decorate-color: #FF0070;
 }
 
 .page {
   background-image: var(--bkg-image);
+}
+
+.header::before {
+  border-top: 1px solid var(--decorate-color);
+  border-right: 1px solid var(--decorate-color);
+}
+
+.header::after {
+  border-bottom: 1px solid var(--decorate-color);
+  border-left: 1px solid var(--decorate-color);
+}
+
+.header__title {
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0px var(--shadow-color);
+}
+
+.header__text {
+  color: var(--title-card-color);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.header__theme-menu-list {
+  color: var(--decorate-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--decorate-color);
+}
+
+.rec {
+  position: absolute;
+  top: 20px;
+  right: 48px;
+  color: #FF0070;
+text-align: center;
+font-family: IBM Plex Mono;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 25px; /* 138.889% */
+}
+
+.rec::after {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  right: -27px;
+  width: 25px;
+  height: 25px;
+  background-image: url(/images/Ellipse\ 4.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+}
+
+.why-hard-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.card__title {
+  color: var(--title-card-color);
+}
+
+.card__text {
+  color: var(--main-text-color);
+}
+
+.card__link {
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.fall-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.how-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.footer::before {
+  border-top: 1px solid var(--decorate-color);
+  border-right: 1px solid var(--decorate-color);
+}
+
+.footer::after {
+  border-bottom: 1px solid var(--decorate-color);
+  border-left: 1px solid var(--decorate-color);
+}
+
+.footer__title {
+  color: var(--main-title-color);
+text-shadow: 2px 2px 0px var(--shadow-color);
 }
