--- a/styles/light.css
+++ b/styles/light.css
@@ -10,6 +10,7 @@
   --title-card-color: #353430;
   --main-title-color: #FFC2E6;
   --shadow-color: #FF0070;
+  --decorate-color: #353430;
 }
 
 .page.theme_light {
@@ -23,10 +24,81 @@
   --title-card-color: #353430;
   --main-title-color: #FFC2E6;
   --shadow-color: #FF0070;
+  --decorate-color: #353430;
 }
 
 .page {
   background-image: var(--bkg-image);
+}
+
+.header::before {
+  border-top: 1px solid var(--decorate-color);
+  border-right: 1px solid var(--decorate-color);
+}
+
+.header::after {
+  border-bottom: 1px solid var(--decorate-color);
+  border-left: 1px solid var(--decorate-color);
+}
+
+.header__title {
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0px var(--shadow-color);
+}
+
+.header__text {
+  color: var(--title-card-color);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.header__theme-menu-list {
+  color: var(--decorate-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--decorate-color);
+}
+
+.why-hard-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.card__title {
+  color: var(--title-card-color);
+}
+
+.card__text {
+  color: var(--main-text-color);
+}
+
+.card__link {
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.fall-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.how-concentrate__title {
+  color: var(--decorate-color);
+}
+
+.footer::before {
+  border-top: 1px solid var(--decorate-color);
+  border-right: 1px solid var(--decorate-color);
+}
+
+.footer::after {
+  border-bottom: 1px solid var(--decorate-color);
+  border-left: 1px solid var(--decorate-color);
+}
+
+.footer__title {
+  color: var(--main-title-color);
+text-shadow: 2px 2px 0px var(--shadow-color);
 }
 
 @media (prefers-color-scheme: light) {
