--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@ font-weight: 700;
 line-height: 82.5%; /* 129.525px */
 align-self: center;
 margin-left: -20px;
+white-space: nowrap;
 }
 
 .header__text {
@@ -265,4 +266,30 @@ font-weight: 700;
 line-height: 82.5%; /* 129.525px */
 justify-self: center;
 align-self: center;
+}
+
+@media ( 375px < width <= 768px) {
+    .header__title {
+      font-size: 120px;
+    }
+
+    .footer__title {
+      font-size: 120px;
+    }
+
+    .header__theme-menu {
+      justify-self: end;
+      align-self: start;
+      margin-top: 146px;
+    }
+
+    .header__theme-menu-list {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .fall-concentrate {
+      display: flex;
+      flex-direction: column;
+    }
 }
