--- a/styles/light.css
+++ b/styles/light.css
@@ -4,12 +4,12 @@
   переключая тему
 */
 .theme-light {
-  --accent-color: #FF8DCB;
+  --accent-color: #ff8dcb;
   --bkg-image: url(/images/cover-image-light.png);
   --main-text-color: #353430;
   --title-card-color: #353430;
-  --main-title-color: #FFC2E6;
-  --shadow-color: #FF0070;
+  --main-title-color: #ffc2e6;
+  --shadow-color: #ff0070;
   --decorate-color: #353430;
 }
 
@@ -18,12 +18,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #FF8DCB;
+  --accent-color: #ff8dcb;
   --bkg-image: url(/images/cover-image-light.png);
   --main-text-color: #353430;
   --title-card-color: #353430;
-  --main-title-color: #FFC2E6;
-  --shadow-color: #FF0070;
+  --main-title-color: #ffc2e6;
+  --shadow-color: #ff0070;
   --decorate-color: #353430;
 }
 
@@ -98,7 +98,7 @@
 
 .footer__title {
   color: var(--main-title-color);
-text-shadow: 2px 2px 0px var(--shadow-color);
+  text-shadow: 2px 2px 0px var(--shadow-color);
 }
 
 .card__link:hover {
@@ -116,7 +116,7 @@ text-shadow: 2px 2px 0px var(--shadow-color);
 }
 
 .header__theme-menu-item:hover {
-  outline: 1px solid rgba(50, 49, 45, 0.40);
+  outline: 1px solid rgba(50, 49, 45, 0.4);
 }
 
 .header__theme-menu-item:focus {
@@ -130,11 +130,11 @@ text-shadow: 2px 2px 0px var(--shadow-color);
 
 @media (prefers-color-scheme: light) {
   :root {
-        --accent-color: #FF8DCB;
-        --bkg-image: url(/images/cover-image-light.png);
-        --main-text-color: #353430;
-        --title-card-color: #353430;
-        --main-title-color: #FFC2E6;
-        --shadow-color: #FF0070;
-    }
+    --accent-color: #ff8dcb;
+    --bkg-image: url(/images/cover-image-light.png);
+    --main-text-color: #353430;
+    --title-card-color: #353430;
+    --main-title-color: #ffc2e6;
+    --shadow-color: #ff0070;
+  }
 }
