--- a/styles/light.css
+++ b/styles/light.css
@@ -112,7 +112,7 @@
 }
 
 .card__link:focus-visible {
-  border: 1px solid var(--main-text-color);
+  outline: 1px solid var(--main-text-color);
 }
 
 .header__theme-menu-item:hover {
