--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
   display: grid;
   padding: 20px;
   min-height: 768px;
+  height: 100vh;
   position: relative;
   z-index: 0;
 }
@@ -41,7 +42,7 @@
 }
 
 .header__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 157px;
   font-style: normal;
   font-weight: 700;
@@ -53,8 +54,7 @@
 
 .header__text {
   width: 50%;
-  height: min-content;
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -65,9 +65,9 @@
 .header__theme-menu-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  gap: 25px;
   text-align: center;
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -81,6 +81,10 @@
 
 .header__theme-menu-button_active {
   pointer-events: none;
+}
+
+.title-decor {
+  height: fit-content;
 }
 
 .content {
@@ -100,7 +104,7 @@
 }
 
 .why-hard-concentrate__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -108,7 +112,7 @@
 }
 
 .card__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -116,7 +120,7 @@
 }
 
 .card__text {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -126,7 +130,6 @@
 .card {
   display: grid;
   gap: 10px;
-  height: max-content;
 }
 
 .card__link {
@@ -138,14 +141,11 @@
 }
 
 .fall-concentrate__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 23.4px; /* 130% */
-}
-
-.fall-concentrate__title {
   grid-column: span 3;
 }
 
@@ -154,7 +154,7 @@
 }
 
 .how-concentrate__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -236,6 +236,7 @@
   min-height: 768px;
   position: relative;
   z-index: 0;
+  height: 100vh;
 }
 
 .footer::before {
@@ -259,7 +260,7 @@
 }
 
 .footer__title {
-  font-family: IBM Plex Mono;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
   font-size: 157px;
   font-style: normal;
   font-weight: 700;
@@ -301,7 +302,7 @@
 
   .header {
     padding: 10px;
-    max-height: 668px;
+    min-height: 668px;
   }
 
   .header__title {
