--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,4 +10,5 @@
   --main-title-color: #DB00FF;
   --shadow-color: #FF0070;
   --decorate-color: #FF0070;
+  --outline-color: rgba(255, 0, 112, 0.4);
 }
