--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,34 @@
   pointer-events: none;
 }
 
+.rec {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 48px;
+  color: #ff0070;
+  text-align: center;
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px; /* 138.889% */
+}
+
+.rec::after {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  right: -27px;
+  width: 25px;
+  height: 25px;
+  background-image: url(/images/Ellipse\ 4.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+}
+
 .title-decor {
   height: fit-content;
 }
@@ -331,5 +359,11 @@
 
   .footer__title {
     font-size: 116px;
+  }
+}
+
+@media (color-scheme: light) {
+  .rec {
+    display: none;
   }
 }
