--- a/styles/style.css
+++ b/styles/style.css
@@ -300,9 +300,10 @@
   align-self: center;
 }
 
-@media (375px < width <= 768px) {
+@media (768px <= width < 1024px) {
   .header__title {
     font-size: 120px;
+    white-space: normal;
   }
 
   .footer__title {
@@ -324,9 +325,13 @@
     display: flex;
     flex-direction: column;
   }
+
+  .footer {
+    min-height: 1024px;
+  }
 }
 
-@media (width <= 375px) {
+@media (375px <= width < 768px) {
   .page {
     width: 100vw;
   }
@@ -339,6 +344,7 @@
   .header__title {
     font-size: 116px;
     white-space: wrap;
+    margin: 0;
   }
 
   .header__text {
@@ -360,8 +366,70 @@
     flex-direction: column;
   }
 
+  .content {
+    padding: 40px 10px;
+    gap: 50px;
+  }
+
   .footer__title {
     font-size: 116px;
+    margin: 0;
+  }
+
+  .footer {
+    padding: 10px;
+    min-height: 667px;
+  }
+}
+
+@media (width < 375px) {
+  .page {
+    width: 100vw;
+  }
+
+  .header {
+    padding: 10px;
+    min-height: 668px;
+  }
+
+  .header__title {
+    font-size: 116px;
+    white-space: wrap;
+    margin: 0;
+  }
+
+  .header__text {
+    width: 100%;
+  }
+
+  .content__section {
+    display: block;
+  }
+
+  .header__theme-menu {
+    justify-self: end;
+    align-self: start;
+    margin-top: 65px;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    padding: 40px 10px;
+    gap: 50px;
+  }
+
+  .footer__title {
+    font-size: 116px;
+    margin: 0;
+  }
+
+  .footer {
+    padding: 10px;
+    min-height: 667px;
   }
 }
 
