--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@
   right: -27px;
   width: 25px;
   height: 25px;
-  background-image: url(/images/Ellipse\ 4.svg);
+  background-image: url(../images/Ellipse\ 4.svg);
   background-repeat: no-repeat;
   background-position: center;
   z-index: 1;
@@ -317,12 +317,17 @@
   .header__theme-menu {
     justify-self: end;
     align-self: start;
-    margin-top: 146px;
+    margin-top: 176px;
+  }
+
+  .fall-concentrate__title {
+    word-wrap: break-word;
   }
 
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
+    gap: 13px;
   }
 
   .fall-concentrate {
@@ -355,6 +360,21 @@
     width: 100%;
   }
 
+  .header::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .header::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .rec {
+    top: 10px;
+    right: 38px;
+  }
+
   .content__section {
     display: block;
   }
@@ -363,11 +383,13 @@
     justify-self: end;
     align-self: start;
     margin-top: 65px;
+    margin-right: 7px;
   }
 
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
+    gap: 13px;
   }
 
   .content {
@@ -430,6 +452,21 @@
     width: 100%;
   }
 
+  .header::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .header::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .rec {
+    top: 10px;
+    right: 38px;
+  }
+
   .content__section {
     display: block;
   }
@@ -438,11 +475,13 @@
     justify-self: end;
     align-self: start;
     margin-top: 65px;
+    margin-right: 7px;
   }
 
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
+    gap: 13px;
   }
 
   .content {
