--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,7 +4,7 @@
 */
 :root {
   --accent-color: #FF0070;
-  --bkg-image: url(/images/cover-image-dark.png);
+  --bkg-image: url(../images/cover-image-dark.png);
   --main-text-color: #F1B2CE;
   --title-card-color: #000028;
   --main-title-color: #DB00FF;
