--- a/styles/style.css
+++ b/styles/style.css
@@ -438,6 +438,16 @@
     min-height: 667px;
   }
 
+  .footer::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .footer::after {
+    bottom: 10px;
+    left: 10px;
+  }
+
   .why-hard-concentrate__title {
     margin-bottom: 20px;
   }
@@ -554,6 +564,16 @@
     min-height: 667px;
   }
 
+  .footer::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .footer::after {
+    bottom: 10px;
+    left: 10px;
+  }
+  
   .why-hard-concentrate__title {
     margin-bottom: 20px;
   }
